--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "./node_modules/mocha/bin/mocha ./tests/accept/*.js --timeout 15000"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
     "cors": "^2.7.1",
     "ejs": "^2.5.1",
     "express": "^4.14.0",
