--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "node ./app.js",
     "seed": "node ./seed/seed.js",
-    "test": "./node_modules/mocha/bin/mocha ./tests/accept/*.js --timeout 15000"
+    "test": "mocha ./tests/accept/*.js --timeout 15000"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
